tests/rosetta/out/Haskell/arithmetic-numbers.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/arithmetic-numbers.hs:168:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-numbers.hs:158:1
                 /workspace/mochi/tests/rosetta/out/Haskell/arithmetic-numbers.hs:168:1
    |
168 | main = do
    | ^^^^
